--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <body>
         <h1>Hello World.</h1>
         
+        <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="script.js" async defer></script>
     </body>
 </html>
