--- a/index.html
+++ b/index.html
@@ -10,17 +10,73 @@
     <title>Pending Makeup Name</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello World.</h1>
+    <div class="container">
+      <div class="row">
+        <!-- Dropdown Button -->
+        <div class="col-sm-12">
+          <div class="dropdown">
+            <button
+              class="btn btn-secondary dropdown-toggle"
+              type="button"
+              id="makeup-types"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Makeup Types
+            </button>
 
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item" id="blush-btn" href="#">Blush</a>
+              <a class="dropdown-item" id="bronzer-btn" href="#">Bronzer</a>
+              <a class="dropdown-item" id="eyebrow-btn" href="#">Eyebrow</a>
+              <a class="dropdown-item" id="eyeliner-btn" href="#">Eyeliner</a>
+              <a class="dropdown-item" id="eyeshadow-btn" href="#">Eyeshadow</a>
+              <a class="dropdown-item" id="foundation-btn" href="#">Foundation</a>
+              <a class="dropdown-item" id="lipliner-btn" href="#">Lip Liner</a>
+              <a class="dropdown-item" id="lipstick-btn" href="#">Lipstick</a>
+              <a class="dropdown-item" id="mascara-btn" href="#">Mascara</a>
+              <a class="dropdown-item" id="nailpolish-btn" href="#">Nail Polish</a>
+            </div>
+          </div>
+        </div>
+        <!-- Specific filter buttons -->
+        <div class="col-sm-12">
+          <button class="btn btn-primary" id="ewg-btn">EWG Verified</button>
+          <button class="btn btn-primary" id="org-btn">Organic</button>
+          <button class="btn btn-primary" id="chem-btn">Chemical Free</button>
+        </div>
+        <div class="col-sm-12">
+          <button class="btn btn-primary" id="veg-btn">Vegan</button>
+          <button class="btn btn-primary" id="glu-btn">Gluten</button>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js" async defer></script>
   </body>
 </html>
