--- a/index.html
+++ b/index.html
@@ -16,22 +16,20 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Button Container -->
     <div class="container">
       <div class="row">
         <!-- Dropdown Button -->
         <div class="col-sm-12">
           <div class="dropdown">
-            <button
-              class="btn btn-secondary dropdown-toggle"
-              type="button"
-              id="makeup-types"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="makeup-types" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Makeup Types
             </button>
 
@@ -45,7 +43,7 @@
               <a class="dropdown-item" id="lipliner-btn" href="#">Lip Liner</a>
               <a class="dropdown-item" id="lipstick-btn" href="#">Lipstick</a>
               <a class="dropdown-item" id="mascara-btn" href="#">Mascara</a>
-              <a class="dropdown-item" id="nailpolish-btn" href="#">Nail Polish</a>
+              <a class="dropdown-item" id="nailpolish-btn"href="#">Nail Polish</a>
             </div>
           </div>
         </div>
