--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               placeholder="What are you looking for?"
             />
             <div class="input-group-append">
-              <button class="btn btn-dark" type="button" id="button-addon2">
+              <button class="btn btn-dark" type="button" id="searchButton">
                 <i class="fas fa-search"></i>
               </button>
             </div>
@@ -73,17 +73,31 @@
           </div>
         </div>
         <!-- Specific filter buttons -->
-        <div class="col-sm-12">
+        <div class="col-sm-12 product">
           <button class="btn btn-primary" id="ewg-btn">EWG Verified</button>
           <button class="btn btn-primary" id="org-btn">Organic</button>
           <button class="btn btn-primary" id="chem-btn">Chemical Free</button>
         </div>
-        <div class="col-sm-12">
+        <div class="col-sm-12 product">
           <button class="btn btn-primary" id="veg-btn">Vegan</button>
           <button class="btn btn-primary" id="glu-btn">Gluten</button>
         </div>
       </div>
     </div>
+    
+
+    <!-- creating modal for makeup selection details -->
+
+    <!--Creates the popup body-->
+    <div class="popup-overlay">
+    <!--Creates the popup content-->
+    <div class="popup-content">
+          <h2></h2>
+          <p></p>
+    <!--popup's close button-->
+          <button class="btn btn-secondary btn-sm close">x</button>    
+    </div>
+  </div>
     
     <!--Javascript Links-->
     <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
