--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Pending Makeup Name</title>
+    <title>Free-from-All Makeup Source</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!--Title-->
     <nav class="navbar navbar-dark bg-dark" id="nav-container">
       <span class="navbar-brand mb-0 h1 justify-center">
-        Makeup Project TBD
+        Free-from-All Makeup Source
       </span>
     </nav>
     <!--Search-->
+    <div class="col-sm-12">
+      <h1 class="text-center" id="main-title">Free-from-All Makeup Source</h1>
+    </div>
     <div class="container" id="search-container">
       <div class="row">
         <div class="col-sm-12" id="search-col">
@@ -30,7 +34,7 @@
               type="text"
               class="form-control"
               id="makeup-input"
-              placeholder="What are you looking for?"
+              placeholder="Search by brand/keyword"
             />
             <div class="input-group-append">
               <button class="btn btn-dark" type="button" id="searchButton">
@@ -48,7 +52,7 @@
         <div class="col-sm-12">
           <div class="dropdown">
             <button
-              class="btn btn-secondary dropdown-toggle"
+              class="btn dropdown-toggle"
               type="button"
               id="makeup-types"
               data-toggle="dropdown"
@@ -74,13 +78,13 @@
         </div>
         <!-- Specific filter buttons -->
         <div class="col-sm-12 product">
-          <button class="btn btn-primary" id="ewg-btn">EWG Verified</button>
-          <button class="btn btn-primary" id="org-btn">Organic</button>
-          <button class="btn btn-primary" id="chem-btn">Chemical Free</button>
+          <button class="btn filter-btn" id="ewg-btn">EWG Verified</button>
+          <button class="btn filter-btn" id="org-btn">Organic</button>
+          <button class="btn filter-btn" id="chem-btn">Chemical Free</button>
         </div>
         <div class="col-sm-12 product">
-          <button class="btn btn-primary" id="veg-btn">Vegan</button>
-          <button class="btn btn-primary" id="glu-btn">Gluten</button>
+          <button class="btn filter-btn" id="veg-btn">Vegan</button>
+          <button class="btn filter-btn" id="glu-btn">Gluten</button>
         </div>
       </div>
     </div>
@@ -101,11 +105,6 @@
     
     <!--Javascript Links-->
     <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <!-- <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
