added subtitle to page with styling

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
+          <p id="sub-title">Find clean beauty products near you.</p>
           <img
             src="./assets/makeup-brush.png"
             alt="makeup brush with neutral powder on it"
