--- a/index.html
+++ b/index.html
@@ -16,12 +16,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!--Title-->
-    <nav class="navbar navbar-dark bg-dark" id="nav-container">
-      <span class="navbar-brand mb-0 h1 justify-center">
-        Free-from-All Makeup Source
-      </span>
-    </nav>
     <!--Search-->
     <div class="col-sm-12">
       <h1 class="text-center" id="main-title">Free-from-All Makeup Source</h1>
@@ -49,7 +43,7 @@
     <div class="container">
       <div class="row">
         <!-- Dropdown Button -->
-        <div class="col-sm-12">
+        <div class="col-sm-12 product">
           <div class="dropdown">
             <button
               class="btn dropdown-toggle"
@@ -84,7 +78,7 @@
         </div>
         <div class="col-sm-12 product">
           <button class="btn filter-btn" id="veg-btn">Vegan</button>
-          <button class="btn filter-btn" id="glu-btn">Gluten</button>
+          <button class="btn filter-btn" id="glu-btn">Gluten Free</button>
         </div>
       </div>
     </div>
@@ -95,12 +89,12 @@
     <!--Creates the popup body-->
     <div class="popup-overlay">
     <!--Creates the popup content-->
-    <div class="popup-content">
-          <h2></h2>
-          <p></p>
+      <div class="popup-content">
+        <h2></h2>
+        <p></p>
     <!--popup's close button-->
-          <button class="btn btn-secondary btn-sm close">x</button>    
-    </div>
+        <button class="btn btn-secondary btn-sm close">x</button>    
+      </div>
   </div>
     
     <!--Javascript Links-->
