--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
         </div>
         <!-- Specific filter buttons -->
         <div class="col-sm-12 product">
-          <button class="btn filter-btn" id="ewg-btn">EWG Verified</button>
-          <button class="btn filter-btn" id="org-btn">Organic</button>
-          <button class="btn filter-btn" id="chem-btn">Chemical Free</button>
+          <button class="btn filter-btn" id="ewg-btn" data-makeupType="ewg">EWG Verified</button>
+          <button class="btn filter-btn" id="org-btn"data-makeupType="organic">Organic</button>
+          <button class="btn filter-btn" id="chem-btn"data-makeupType="chemfree">Chemical Free</button>
         </div>
         <div class="col-sm-12 product">
-          <button class="btn filter-btn" id="veg-btn">Vegan</button>
-          <button class="btn filter-btn" id="glu-btn">Gluten Free</button>
+          <button class="btn filter-btn" id="veg-btn"data-makeupType="vegan">Vegan</button>
+          <button class="btn filter-btn" id="glu-btn"data-makeupType="glutenfree">Gluten Free</button>
         </div>
       </div>
     </div>
-
+   
     <!-- creating modal for makeup selection details -->
 
     <!--Creates the popup body-->
