--- a/index.html
+++ b/index.html
@@ -111,7 +111,13 @@
         </div>
       </div>
     </div>
-   
+    <!-- empty container for the results  -->
+    <div class="container" id="results-container">
+      <div class="row">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-6" id="results-col">  </div>
+      </div>
+    </div>
     <!-- creating modal for makeup selection details -->
 
     <!--Creates the popup body-->
