functioning map with stores and infoboxes

--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
         <button class="btn btn-secondary btn-sm close">x</button>    
       </div>
   </div>
+  <div id="myMap" style="position:relative;width:500px;height:400px;"></div>
+
     <!--Javascript Links-->
     <script
       src="http://code.jquery.com/jquery-3.5.1.min.js"
@@ -136,8 +138,9 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
-    <script src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=AizLYVCVmDtzFe35OyVFF6FoMBjJuPA96Bc_pPQ50KQ9oMiNl4Pr89MbxB6FbzG9'
-          type='text/javascript' ></script>
-    <script src="script.js" async defer></script>
+    <script src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=AizLYVCVmDtzFe35OyVFF6FoMBjJuPA96Bc_pPQ50KQ9oMiNl4Pr89MbxB6FbzG9'
+          type='text/javascript' async defer></script>
+    <script src="script.js" type="text/javascript" async defer></script>
+    
   </body>
 </html>
