added tagline to title

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!--Title-->
     <div class="cell">
       <h1 class="text-center" id="main-title">Free-from-All Makeup Source</h1>
+      <p id="tagline">Find clean beauty products near you.</p>
     </div>
     <!--Makeup Swatch 1 [WIP]-->
     <!-- <div class="makeup-swoosh">
