--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <p></p>
     <!--popup's close button-->
         <button class="btn btn-secondary btn-sm close">x</button>  
-        <div id="myMap" style="position:relative;width:500px;height:400px;"></div>
+        <!-- <div id="myMap" style="position:relative;width:300px;height:300px;"></div> -->
       </div>
 
     <!--Javascript Links-->
