--- a/index.html
+++ b/index.html
@@ -112,26 +112,24 @@
 
         </div>
     <!-- empty container for the results  -->
-    <div class="container" id="results-container">
-      <div class="row">
-        <div class="col-sm-3"></div>
-        <div class="col-sm-6" id="results-col">  </div>
+    <div class="grid-container" id="results-container">
+      <div class="grid-x">
+        <div class="cell" id="results-col"></div>
       </div>
     </div>
     
     <!-- creating modal for makeup selection details -->
 
     <!--Creates the popup body-->
-    <div class="popup-overlay">
-
-    <!--Creates the popup content-->
-      <div class="popup-content">
-        <h2></h2>
-        <p></p>
-    <!--popup's close button-->
-        <button class="btn btn-secondary btn-sm close">x</button>  
-        <!-- <div id="myMap" style="position:relative;width:300px;height:300px;"></div> -->
-      </div>
+    <div class="reveal popup-content" id="product-details" data-reveal>
+      <h3 class="detail-information" id="detail-name">Product Name</h3>
+      <p class="detail-information" id="detail-brand">Brand:</p>
+      <p class="detail-information" id="detail-description">Description:</p>
+      <p class="detail-information" id="detail-tags">Tags:</p>
+      <div id="myMap" class="modal-map"></div>
+      <button class="close-button" data-close aria-label="Close modal" type="button">
+        <span aria-hidden="true">&times;</span>
+      </button>
     </div>
 
 
@@ -141,10 +139,12 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
-
     <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
     <script src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=AizLYVCVmDtzFe35OyVFF6FoMBjJuPA96Bc_pPQ50KQ9oMiNl4Pr89MbxB6FbzG9'
           type='text/javascript' async defer></script>
+    <script>
+      $(document).foundation();
+    </script>
     <script src="script.js" type="text/javascript" async defer></script>
   </body>
 </html>
