added makeup brush details to styling

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       <h1 class="text-center" id="main-title">Free-from-All Makeup Source</h1>
       <p id="tagline">Find clean beauty products near you.</p>
     </div>
-    <!--Makeup Swatch 1 [WIP]-->
-    <!-- <div class="makeup-swoosh">
+    <!--Makeup Swatch 1-->
+    <div class="makeup-swoosh">
       <img
         src="./assets/makeup-swoosh-300.png"
         alt="neutral line with curved pattern"
-        class="makeup-stroke-img"
+        class="makeup-swoosh-img"
       />
-    </div> -->
+    </div>
     <!--Makeup Image-->
     <div class="grid-container">
       <div class="grid-x">
@@ -47,6 +47,14 @@
           />
         </div>
       </div>
+    </div>
+    <!--Makeup Swatch 2-->
+    <div class="makeup-swoosh">
+      <img
+        src="./assets/makeup-swoosh-300.png"
+        alt="neutral line with curved pattern"
+        class="makeup-swoosh-img-2"
+      />
     </div>
     <!--Search-->
     <div class="grid-container" id="search-container">
@@ -109,7 +117,6 @@
               />
             </div>
           </div>
-
         </div>
     <!-- empty container for the results  -->
     <div class="grid-container" id="results-container">
