got filter buttons working and location only asked once

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               placeholder="Search by brand/keyword"
             />
             <span class="input-group-append">
-              <button class="button" type="button" id="searchButton">
+              <button class="searchButton" type="button" id="searchButton">
                 <i class="fas fa-search"></i>
               </button>
             </span>
@@ -74,7 +74,7 @@
       <div class="grid-x">
         <div class="cell product">
             <div class="cell product">
-              <a class="button type-btn" id="blush-btn" href="#">Blush</a>
+              <a class="button type-btn" id="Blush" href="#">Blush</a>
               <a class="button type-btn" id="bronzer-btn" href="#">Bronzer</a>
               <a class="button type-btn" id="eyebrow-btn" href="#">Eyebrow</a>
               <a class="button type-btn" id="eyeliner-btn" href="#">Eyeliner</a>
