--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               placeholder="Search by brand/keyword"
             />
             <span class="input-group-append">
-              <button class="searchButton" type="button" id="searchButton">
+              <button class="button" type="button" id="searchButton">
                 <i class="fas fa-search"></i>
               </button>
             </span>
@@ -82,7 +82,7 @@
       <div class="grid-x">
         <div class="cell product">
             <div class="cell product">
-              <a class="button type-btn" id="Blush" href="#">Blush</a>
+              <a class="button type-btn" id="blush-btn" href="#">Blush</a>
               <a class="button type-btn" id="bronzer-btn" href="#">Bronzer</a>
               <a class="button type-btn" id="eyebrow-btn" href="#">Eyebrow</a>
               <a class="button type-btn" id="eyeliner-btn" href="#">Eyeliner</a>
@@ -142,7 +142,7 @@
 
     <!--Javascript Links-->
     <script
-      src="http://code.jquery.com/jquery-3.5.1.min.js"
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
