added styling for button hover

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     
     <!-- Type of makeup buttons -->
     <div class="grid-container">
+      <p class="search-tagline">Search by type.</p>
       <div class="grid-x">
         <div class="cell product">
             <div class="cell product">
@@ -97,6 +98,7 @@
         </div>
 
         <!-- Specific filter buttons -->
+        <p class="search-tagline">Search by tag.</p>
         <div class="cell product">
           <button class="button filter-btn" id="ewg-btn" data-makeupType="ewg">EWG Verified</button>
           <button class="button filter-btn" id="org-btn" data-makeupType="organic">Organic</button>
